practice/09-testpod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-pod
  namespace: practice
  labels:
    app: test-pod
spec:
  containers:
  - name: test
    image: busybox
    command: ["sleep", "3600"]
