practice/01-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: practice
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
      tier: api
  template:
    metadata:
      labels:
        app: backend
        tier: api
    spec:
      containers:
      - name: httpd
        image: httpd:alpine
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: backend-svc
  namespace: practice
spec:
  selector:
    app: backend
  ports:
  - port: 80
    targetPort: 80
