practice/03-db.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: database
  namespace: practice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: database
      tier: data
  template:
    metadata:
      labels:
        app: database
        tier: data
    spec:
      containers:
      - name: postgres
        image: postgres:alpine
        ports:
        - containerPort: 5432
---
apiVersion: v1
kind: Service
metadata:
  name: database-svc
  namespace: practice
spec:
  selector:
    app: database
  ports:
  - port: 5432
    targetPort: 5432
