practice/07-backend2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-server
  namespace: practice
spec:
  replicas: 2
  selector:
    matchLabels:
      app: api-server
  template:
    metadata:
      labels:
        app: api-server
    spec:
      containers:
      - name: api
        image: kennethreitz/httpbin
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: api-server-svc
  namespace: practice
spec:
  selector:
    app: api-server
  ports:
  - port: 80
    targetPort: 80
