practice/04-default-deny.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: default-deny
  namespace: practice
spec:
  endpointSelector: {}
  ingress:
  - {}
