practice/10-domain-policy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: dns-policy
  namespace: practice
spec:
  endpointSelector:
    matchLabels:
      app: test-pod
  egress:
  - toEndpoints:
    - matchLabels:
        k8s:io.kubernetes.pod.namespace: kube-system
        k8s:app: kube-dns
    toPorts:
    - ports:
      - port: "53"
        protocol: UDP
      rules:
        dns:
        - matchName: "kubernetes.default.svc.cluster.local"
        - matchPattern: "*.practice.svc.cluster.local"
